--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Gilda+Display&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Gilda+Display&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-.font-gilda{
-    font-family: "Gilda Display", serif;
-  }
-.font-poppins{
-    font-family: "Poppins", sans-serif;
-  }
+.font-gilda {
+  font-family: "Gilda Display", serif;
+}
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
 
-  [type="date"]::-webkit-calendar-picker-indicator {
-    opacity: 0;
-    width: 100%;
-    height: 100%; 
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+#parent:hover #child {
+  transform: scale(1.8);
+}
+#parent{
+  transition: 0.4s;
+
+}
